#419 Disable lessio security manager for iT